# sunclaw

./: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md  ROADMAP.md  SCRATCHPAD.md  STATUS.md
.github/workflows/: release.yml
configs/: default.toml
configs/policies/: baseline.toml
crates/sunclaw-app/: Cargo.toml
crates/sunclaw-app/src/: lib.rs
crates/sunclaw-cli/: Cargo.toml
crates/sunclaw-cli/src/: main.rs  serve.rs  tui.rs
crates/sunclaw-cli/ui/: index.html
crates/sunclaw-core/: Cargo.toml
crates/sunclaw-core/src/: lib.rs
crates/sunclaw-mcp/: Cargo.toml
crates/sunclaw-mcp/src/: lib.rs
crates/sunclaw-memory-sqlite/: Cargo.toml
crates/sunclaw-memory-sqlite/src/: lib.rs
crates/sunclaw-orchestrator/: Cargo.toml
crates/sunclaw-orchestrator/src/: graph.rs  lib.rs
crates/sunclaw-policy/: Cargo.toml
crates/sunclaw-policy/src/: lib.rs
crates/sunclaw-provider/: Cargo.toml
crates/sunclaw-provider/src/: lib.rs  openai.rs
crates/sunclaw-registry/: Cargo.toml
crates/sunclaw-registry/src/: lib.rs
crates/sunclaw-runtime/: Cargo.toml
crates/sunclaw-runtime/src/: lib.rs
crates/sunclaw-sandbox/: Cargo.toml
crates/sunclaw-sandbox/src/: lib.rs
crates/sunclaw-server/: Cargo.toml
crates/sunclaw-server/src/: main.rs
crates/sunclaw-server/ui/: index.html
crates/sunclaw-skills/: Cargo.toml
crates/sunclaw-skills/src/: lib.rs
crates/sunclaw-telegram/: Cargo.toml
crates/sunclaw-telegram/src/: lib.rs  main.rs
crates/sunclaw-tools/: Cargo.toml
crates/sunclaw-tools/src/: lib.rs  search.rs
docs/architecture/: 00-overview.md
plugins/: README.md
scripts/: install.ps1  install.sh  package.ps1
