[workspace]
members = [
  "crates/sunclaw-core",
  "crates/sunclaw-runtime",
  "crates/sunclaw-provider",
  "crates/sunclaw-orchestrator",
  "crates/sunclaw-policy",
  "crates/sunclaw-skills",
  "crates/sunclaw-app",
  "crates/sunclaw-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Sunclaw Team"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
