[workspace]
members = [
  "crates/sunclaw-core",
  "crates/sunclaw-runtime",
  "crates/sunclaw-provider",
  "crates/sunclaw-orchestrator",
  "crates/sunclaw-policy",
  "crates/sunclaw-skills",
  "crates/sunclaw-app",
  "crates/sunclaw-cli",
  "crates/sunclaw-tools",
  "crates/sunclaw-memory-sqlite",
  "crates/sunclaw-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Sunclaw Team"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "2"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
