[package]
name = "sunclaw-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
dotenvy.workspace = true
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-policy = { path = "../sunclaw-policy" }
sunclaw-provider = { path = "../sunclaw-provider" }
sunclaw-runtime = { path = "../sunclaw-runtime" }
sunclaw-tools = { path = "../sunclaw-tools" }
sunclaw-memory-sqlite = { path = "../sunclaw-memory-sqlite" }
sunclaw-mcp = { path = "../sunclaw-mcp" }
sunclaw-sandbox = { path = "../sunclaw-sandbox" }
sunclaw-registry = { path = "../sunclaw-registry" }
serde.workspace = true
serde_json.workspace = true
