[package]
name = "sunclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
sunclaw-app = { path = "../sunclaw-app" }
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-telegram = { path = "../sunclaw-telegram" }
sunclaw-orchestrator = { path = "../sunclaw-orchestrator" }
dialoguer.workspace = true
colored.workspace = true
clap.workspace = true
sysinfo.workspace = true
dotenvy.workspace = true
home = "0.5"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
tokio-stream = "0.1"
