[package]
name = "sunclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
sunclaw-app = { path = "../sunclaw-app" }
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-telegram = { path = "../sunclaw-telegram" }
sunclaw-orchestrator = { path = "../sunclaw-orchestrator" }
sunclaw-runtime = { path = "../sunclaw-runtime" }
dialoguer.workspace = true
colored.workspace = true
clap.workspace = true
sysinfo.workspace = true
dotenvy.workspace = true
serde.workspace = true
home = "0.5"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
