[package]
name = "sunclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sunclaw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
sunclaw-app = { path = "../sunclaw-app" }
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-telegram = { path = "../sunclaw-telegram" }
sunclaw-orchestrator = { path = "../sunclaw-orchestrator" }
sunclaw-runtime = { path = "../sunclaw-runtime" }
dialoguer.workspace = true
colored.workspace = true
clap.workspace = true
sysinfo.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace"] }
rust-embed = "8.0"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
open = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
home = "0.5"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
