[package]
name = "sunclaw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sunclaw-core = { path = "../sunclaw-core" }
anyhow.workspace = true
tokio = { workspace = true, features = ["io-util", "process"] }
serde.workspace = true
serde_json.workspace = true
serde_derive = "1.0"
async-trait.workspace = true
futures-util = "0.3"
rmcp = "0.1" # Dựa trên nghiên cứu, rmcp là official-ish cho Rust
