[package]
name = "sunclaw-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sunclaw-core = { path = "../sunclaw-core" }

[dev-dependencies]
