[package]
name = "sunclaw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-orchestrator = { path = "../sunclaw-orchestrator" }

[dev-dependencies]
