[package]
name = "sunclaw-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sunclaw-app = { path = "../sunclaw-app" }
sunclaw-core = { path = "../sunclaw-core" }
sunclaw-runtime = { path = "../sunclaw-runtime" }
anyhow = { workspace = true }
